# ChangeLog for dev-ruby/paypal
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  27 Dec 2009; Hans de Graaff <graaff@gentoo.org> paypal-2.0.0.ebuild,
  +metadata.xml:
  Fix QA issues.
