@@ -1,14 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 DIST paypal-2.0.0.gem 109568 RMD160 e723d599b7a3cd6189388cbdb1176de1f1987f67 SHA1 b44ba74aa1197d74633b65b4ca0cd30db517a749 SHA256 6a73d87e4017a8a92b33df184dc459dafdaff74a1c9ef3039f67c160a8368a1c
+EBUILD paypal-2.0.0-r1.ebuild 586 RMD160 4e55994ee4b5dea0a83840cb0c85ec1c344d831d SHA1 1b7f44193e8ab00a1bbd1c00d7b4ba36ff929577 SHA256 c253087c5061c47c95843dbc33ba5451df30403b925d49f1025bbd485a293106
 EBUILD paypal-2.0.0.ebuild 475 RMD160 2cc1ee52feb30ea6e3a078ebd07ce29d94fc908f SHA1 1460237d015819d87a93d41420bd835c75a40cb1 SHA256 48e0740b8cdd8415d1574dc4a076821d91b900579ac7599e99263593acee2c4a
-MISC ChangeLog 222 RMD160 a2e01c0f3c7f8ef51624d3378b2a860e2e6cad55 SHA1 7e330f08d77232028bad6a74a46cfed0185c2d98 SHA256 1e7e418ce67f9e368e298b9951d06be3c61874f24fa5252690aab70a53aafdaa
+MISC ChangeLog 357 RMD160 4d00f18c8dd578fe2c63716291c441cc060d306e SHA1 e51c6e892efe4f3898f4b31d1dee39d91f7fa71f SHA256 e818bebc82625fad2d3b9a8a034caa305b449a2d1052b6679f1bf43a2dc24f58
 MISC metadata.xml 215 RMD160 682b22c57f2f17c789b244e2bb32fe15ca3fa332 SHA1 ccf017e39c3f44ac4b557da94f91096555cb1be2 SHA256 c058515dd6264789274b580e999ce4fbbb5c53c36a452bf7b32fd227980abcf8
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.11 (GNU/Linux)
+Version: GnuPG v2.0.15 (GNU/Linux)
 
-iEYEARECAAYFAks3RX8ACgkQeM7EJeUH71NZWwCfTDmfpvRf0z/3tb6EckML4K9C
-9DgAn0aW555rhFbrzUqT9m1n5YawkSxi
-=43mJ
+iF4EAREIAAYFAkxlVQoACgkQZihJkut28SsesgD/af0zoB6dIPIjDn7Rpqw7SKxn
+AMcXjuoIbW+E59UjFZMBAIL+h/X9OPnqwUOBbAb/C1lHpWGGS/fkRJD34BS9bH2F
+=84+8
 -----END PGP SIGNATURE-----
