@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/paypal
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*paypal-2.0.0-r1 (13 Aug 2010)
+
+  13 Aug 2010; Hans de Graaff <graaff@gentoo.org> +paypal-2.0.0-r1.ebuild:
+  Convert to ruby-fakegem.
 
   27 Dec 2009; Hans de Graaff <graaff@gentoo.org> paypal-2.0.0.ebuild,
   +metadata.xml:
